<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.story.StoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_title_page"
            style="@style/TextSpec.Field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_story"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_page"
            app:layout_constraintVertical_bias="0.0"
            tools:layout_editor_absoluteX="-46dp">


            <ImageView
                android:id="@+id/iv_story"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:src="@drawable/ic_baseline_image_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_media_method"
                style="@style/TextSpec.Field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/media_method"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_story" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_camera"
                style="@style/TextSpec.Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_baseline_camera_24"
                android:drawablePadding="10dp"
                android:minWidth="60dp"
                android:minHeight="40dp"
                android:paddingVertical="5dp"
                android:text="@string/camera"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/tv_media_method"
                tools:layout_editor_absoluteX="8dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_gallery"
                style="@style/TextSpec.Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_baseline_image_search_24"
                android:drawablePadding="10dp"
                android:minWidth="60dp"
                android:minHeight="40dp"
                android:paddingVertical="5dp"
                android:text="@string/gallery_choice"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/btn_camera"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:id="@+id/tv_title_description"
                style="@style/TextSpec.Field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/add_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_gallery" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_description"
                style="@style/TextSpec.Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_description"
                android:inputType="textMultiLine"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_description" />

            <Button
                android:id="@+id/btn_upload"
                style="@style/TextSpec.Field"
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/main_theme"
                android:text="@string/upload"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/btn_add_location"
                tools:layout_editor_absoluteX="8dp" />

            <TextView
                android:id="@+id/tv_add_location"
                style="@style/TextSpec.Field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/optional"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_description" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_location"
                style="@style/TextSpec.Value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/ic_baseline_add_location_alt_24"
                android:drawablePadding="10dp"
                android:minWidth="60dp"
                android:minHeight="40dp"
                android:paddingVertical="5dp"
                android:text="@string/add_location"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                app:layout_constraintTop_toBottomOf="@+id/tv_add_location"
                tools:layout_editor_absoluteX="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>